--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -24,16 +24,21 @@
                 text-decoration: none;
                 font-size: 11px;
                 color: var(--darkgrey);
-                img {
+                img, .initials {
                     object-fit: cover;
                     border-radius: 50%;
                     width: 50px;
                     height: 50px;
                     border: 5px solid var(--lightgrey);
-                    background: var(--white);
+                    color: var(--white);
+                    background: var(--grey);
                     position: absolute;
                     left: -25px;
                     top: -10px;
+                    text-align: center;
+                    font-size: 15px;
+                    line-height: 41px;
+                    text-transform: uppercase;
                 }
                 span {
                     margin-left: 45px;
@@ -42,10 +47,9 @@
             &.self{
               margin-left: calc(~"34% - 25px");
               text-align: right;
-                .sender img{
+                .sender img, .sender .initials{
                     left: auto;
                     right: -25px;
-                    background: var(--altgrey);
                 }
                 .umessages{
                     margin-left: 5px;
