--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -13,6 +13,8 @@ html{
 --red: #f44336;
 --darkred: #ea1c0d;
 --link: #3879d9;
+--tweetbg: #55acee;
+--tweettext: #fff;
 //
 --headerbarheight: 35px;
 
@@ -35,6 +37,7 @@ html{
 	    --red: #996DBF;
 	    --darkred: #804cad;
 	    --link: #F9C15C;
+	    --tweetbg: #644104;
 
 		.listhead,
 		.convhead .name,
@@ -59,5 +62,6 @@ html{
 	    --red: #996DBF;
 	    --darkred: #804cad;
 	    --link: #F9C15C;
+	    --tweetbg: #644104;
 	}
 }
