--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -56,6 +56,9 @@
                     padding-left: 5px;
                     padding-right: 30px;
                     background: var(--altgrey);
+                    .message .tweet{
+                        margin: 10px -34px -5px -10px;
+                    }
                 }
             }
             @radius: 13px;
@@ -68,6 +71,7 @@
                 background: var(--white);
                 display: inline-block;
                 text-align: left;
+                overflow: hidden;
                 .message {
                     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, "NotoColorEmoji";
                     padding: 5px;
@@ -97,13 +101,20 @@
                         font-size: 0.9em;
                     }
                     .tweet {
-                      padding: 8px 8px 2px;
-                      font-size: 0.9em;
-                      background-color: var(--lightgrey);
-                      border-radius: 8px;
-                      p + img {
-                        margin-top: 5px
-                      }
+                        font-size: 0.9em;
+                        background-color: var(--lightgrey);
+                        background: var(--tweetbg);
+                        color: var(--tweettext);
+                        font-size: 14px;
+                        margin: 10px -10px -5px -34px;
+                        p{
+                            padding: 10px 20px;
+                        }
+                        img {
+                            border-radius: 0;
+                            display: block;
+                            max-height: none;
+                        }
                     }
                 }
             }
