--- a/src/ui/css/yakyak/global.less
+++ b/src/ui/css/yakyak/global.less
@@ -71,3 +71,10 @@ body .notrstack {
 *:focus {
     outline: none;
 }
+
+img.emoji {
+   height: 1em;
+   width: 1em;
+   margin: 0 .05em 0 .1em;
+   vertical-align: -0.1em;
+}
