--- a/src/ui/css/yakyak/listhead.less
+++ b/src/ui/css/yakyak/listhead.less
@@ -10,6 +10,7 @@
     cursor: default;
     -webkit-app-region: drag;
     -webkit-user-select: none;
+    z-index: 2; // hides the separator in the header
     button{
         background: none;
         color: var(--white);
