Added instagram integration, on instagram links shows title and image

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -15,53 +15,57 @@ html{
 --link: #3879d9;
 --tweetbg: #55acee;
 --tweettext: #fff;
+--instagrambg: #55acee;
+--instagramtext: #fff;
 //
 --headerbarheight: 35px;
 
-	&.blue{
-		--green: #03A9F4;
-		--darkgreen: #0286c2;
-	}
+  &.blue{
+    --green: #03A9F4;
+    --darkgreen: #0286c2;
+  }
 
-	&.dark{
-		--white: #1D242A;
-	    --ghostwhite: #2d3d46;
-	    --lightgrey: #242d34;
-	    --altgrey: #333940;
-	    --grey: #333940;
-	    --darkgrey: #4a525c;
-	    --lightblack: #475866;
-	    --black: #A2A2A2;
-	    --green: #161c20;
-	    --darkgreen: #0f1316;
-	    --red: #996DBF;
-	    --darkred: #804cad;
-	    --link: #F9C15C;
-	    --tweetbg: #644104;
+  &.dark{
+    --white: #1D242A;
+      --ghostwhite: #2d3d46;
+      --lightgrey: #242d34;
+      --altgrey: #333940;
+      --grey: #333940;
+      --darkgrey: #4a525c;
+      --lightblack: #475866;
+      --black: #A2A2A2;
+      --green: #161c20;
+      --darkgreen: #0f1316;
+      --red: #996DBF;
+      --darkred: #804cad;
+      --link: #F9C15C;
+      --tweetbg: #644104;
+      --instagrambg: #333940;
 
-		.listhead,
-		.convhead .name,
-		.controls .button,
-		.convhead .headwrap > .button,
-		.convadd .button{
-			color: var(--black);
-		}
-	}
+    .listhead,
+    .convhead .name,
+    .controls .button,
+    .convhead .headwrap > .button,
+    .convadd .button{
+      color: var(--black);
+    }
+  }
 
-	&.material{
-		--white: #202B31;
-	    --ghostwhite: #2d3d46;
-	    --lightgrey: #28353B;
-	    --altgrey: #2B3E41;
-	    --grey: #303F47;
-	    --darkgrey: #617E8A;
-	    --lightblack: #455a64;
-	    --black: #99B1B7;
-	    --green: #7BC8BF;
-	    --darkgreen: #57b9ae;
-	    --red: #996DBF;
-	    --darkred: #804cad;
-	    --link: #F9C15C;
-	    --tweetbg: #644104;
-	}
+  &.material{
+    --white: #202B31;
+      --ghostwhite: #2d3d46;
+      --lightgrey: #28353B;
+      --altgrey: #2B3E41;
+      --grey: #303F47;
+      --darkgrey: #617E8A;
+      --lightblack: #455a64;
+      --black: #99B1B7;
+      --green: #7BC8BF;
+      --darkgreen: #57b9ae;
+      --red: #996DBF;
+      --darkred: #804cad;
+      --link: #F9C15C;
+      --tweetbg: #644104;
+      --instagrambg: #333940;
+  }
 }
