--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -87,7 +87,7 @@
     }
     > .info {
         position: absolute;
-        top: 0;
+        top: 15px;
         right: 15px;
         > div {
             padding: 5px 10px;
