--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -13,10 +13,10 @@ html{
 --red: #f44336;
 --darkred: #ea1c0d;
 --link: #3879d9;
---tweetbg: #55acee;
---tweettext: #fff;
---instagrambg: #55acee;
---instagramtext: #fff;
+--opengraphlink: var(--darkgrey);
+--opengraphtitle: var(--black);
+--opengraphdesc: var(--lightblack);
+--opengraphbg: var(--white);
 //
 --headerbarheight: 35px;
 
@@ -39,8 +39,6 @@ html{
       --red: #996DBF;
       --darkred: #804cad;
       --link: #F9C15C;
-      --tweetbg: #644104;
-      --instagrambg: #333940;
 
     .listhead,
     .convhead .name,
@@ -65,7 +63,5 @@ html{
       --red: #996DBF;
       --darkred: #804cad;
       --link: #F9C15C;
-      --tweetbg: #644104;
-      --instagrambg: #333940;
   }
 }
