close button working

--- a/src/ui/css/yakyak/input.less
+++ b/src/ui/css/yakyak/input.less
@@ -11,6 +11,8 @@
         text-align: center;
         div.relative {
             display: inline-block;
+            min-height: 5em;
+            min-width: 3em;
         }
         //
         position: absolute;
@@ -38,6 +40,12 @@
                 position: relative;
                 font-size: 3em;
             }
+        }
+        .close-preview {
+            position:absolute;
+            top: 0;
+            right: 0;
+            cursor: pointer;
         }
         .img {
           text-align: center;
