sets maximum height for preview

--- a/src/ui/css/yakyak/input.less
+++ b/src/ui/css/yakyak/input.less
@@ -47,9 +47,9 @@
             right: 0;
             cursor: pointer;
         }
-        .img {
+        img {
           text-align: center;
-          max-height:200px;
+          max-height:22em;
         }
     }
 
