--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -7,6 +7,7 @@
     animation: spinnerRotate 2s linear infinite;
 }
 .applayout {
+    * {pointer-events: none;}
     display: flex;
     height: 100%;
     > .controls {
@@ -22,6 +23,29 @@
             border-right: 1px solid var(--grey);
         }
     }
+
+    &.dragover > #drop-overlay {
+        display: table;
+        z-index: 1;
+    }
+
+    > #drop-overlay {
+        top: 0;
+        left: 0;
+        display: none;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        text-align: center;
+        margin-top: auto;
+        background-color: rgba(119, 119, 119, .4);
+        font-size: 5em;
+        & div {
+          display: table-cell;
+          vertical-align: middle;
+        }
+    }
+
     > .leftresize {
         position: fixed;
         top: 0;
