change color to gray and text

--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -37,17 +37,17 @@
         text-align: center;
         margin-top: auto;
         background-color: rgba(119, 119, 119, .4);
-        font-size: 5em;
+        font-size: 4em;
         & div.inner-overlay {
-          display: table;
+          top: 15%;
           height: 70%;
           width: 70%;
+          display: table;
           position: relative;
           margin: auto auto;
-          top: 15%;
           border: 13px dashed rgba(100,100,100,1);
           border-radius: 10px;
-          color: white;
+          color: rgba(100,100,100,1);
           div {
             display: table-cell;
             vertical-align: middle;
