ditching the square overlay and animating hover
with a color change

--- a/src/ui/css/yakyak/input.less
+++ b/src/ui/css/yakyak/input.less
@@ -1,5 +1,15 @@
 @button-container-width: 60px;
 
+@keyframes color_change {
+  from { color: rgba(119, 119, 119, .9); }
+  to { color: rgba(119, 119, 119, 1); }
+}
+
+@keyframes color_change_back {
+  from { color: rgba(119, 119, 119, 1); }
+  to { color: rgba(119, 119, 119, .9); }
+}
+
 .input {
     font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, "NotoColorEmoji";
     position: relative;
@@ -11,8 +21,8 @@
         text-align: center;
         div.relative {
             display: inline-block;
-            min-height: 9em;
-            min-width: 6em;
+            min-height: 5em;
+            min-width: 5em;
         }
         //
         position: absolute;
@@ -25,8 +35,13 @@
             transform: translate3d(0, -100%, 0);
         }
         //
+        .after:hover {
+          animation: color_change 1s;
+          color: rgba(119, 119, 119, 1);
+        }
         .after {
-            background-color: rgba(119, 119, 119, .4);
+            animation: color_change_back 1s;
+            cursor: pointer;
             position: absolute;
             width: 100%;
             height: 100%;
@@ -34,11 +49,13 @@
             bottom: 0;
             left: 0;
             text-align: center;
-            color: rgb(0,240,0);
+            color: rgba(119, 119, 119, .9);
             span {
-                top: 30%;
+                top: 50%;
                 position: relative;
                 font-size: 3em;
+                display: block;
+                transform: perspective(1px) translateY(-50%);
             }
         }
         .close-preview {
