--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -32,6 +32,9 @@
         flex: none;
         cursor: ew-resize;
         -webkit-user-select: none;
+        &.minimal {
+            display: none;
+        }
     }
     > .left {
         -webkit-user-select: none;
