--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -6,9 +6,79 @@
 .spin{
     animation: spinnerRotate 2s linear infinite;
 }
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+
 .applayout {
     display: flex;
     height: 100%;
+    .connecting {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255,255,255, 1);
+        z-index: 1000;
+        &.hide {
+            visibility: hidden;
+            opacity: 0;
+            transition: visibility 0s 1s, opacity 1s ease-out;
+        }
+        .hide {
+            display: none;
+        }
+        > div {
+            margin: 0 auto;
+            align-items: center;
+            div  {
+                text-align: center;
+                margin-bottom: 1em;
+                img {
+                    height: 10em;
+                }
+                span.text {
+                    text-align: center;
+                    font-size: 2em;
+                    color: #555;
+                }
+                &.spinner {
+                  text-align: center;
+                  > div {
+                    width: 18px;
+                    height: 18px;
+                    background-color: var(--green);
+
+                    border-radius: 100%;
+                    display: inline-block;
+                    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+                    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+                  }
+                  .bounce1 {
+                    -webkit-animation-delay: -0.32s;
+                    animation-delay: -0.32s;
+                  }
+                  .bounce2 {
+                    -webkit-animation-delay: -0.16s;
+                    animation-delay: -0.16s;
+                  }
+                }
+            }
+        }
+    }
     > .controls {
         flex: none;
         position: fixed;
