working about window, using same structure as applayout

--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -6,6 +6,19 @@
 .spin{
     animation: spinnerRotate 2s linear infinite;
 }
+
+.about {
+    margin-top: 3em;
+    margin-bottom: 3em;
+    text-align: center;
+    img {
+        height: 4em;
+    }
+    div {
+        margin-bottom: .5em;
+    }
+}
+
 .applayout {
     display: flex;
     height: 100%;
