shows who has each message

--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -19,6 +19,31 @@
         position: relative;
         width: 66%;
         margin-left: 25px;
+        .seen {
+          text-decoration: none;
+          font-size: 11px;
+          color: var(--darkgrey);
+          display: inline-block;
+          margin-right: 25px;
+          img, .initials {
+              object-fit: cover;
+              border-radius: 50%;
+              width: 25px;
+              height: 25px;
+              border: 5px solid var(--lightgrey);
+              color: var(--white);
+              background: var(--grey);
+              position: absolute;
+              bottom: 0px;
+              text-align: center;
+              font-size: 10px;
+              line-height: 41px;
+              text-transform: uppercase;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+          }
+        }
         .sender {
             text-decoration: none;
             font-size: 11px;
