--- a/src/ui/css/yakyak/convadd.less
+++ b/src/ui/css/yakyak/convadd.less
@@ -1,4 +1,15 @@
 .convadd {
+  .initials {
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      text-align: center;
+      font-size: 17px;
+      line-height: 50px;
+      color: var(--white);
+      background: var(--grey);
+      text-transform: uppercase;
+  }
   padding: 20px 20px 0;
   h1{
     margin-top: 30px;
