fix menu icon color in black scheme

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -43,6 +43,7 @@ html{
       --instagrambg: #333940;
 
     .listhead,
+    .listhead button,
     .convhead .name,
     .controls .button,
     .convhead .headwrap > .button,
