unify drawing of avatars with fallback to initials
issue #74

--- a/src/ui/css/yakyak/convadd.less
+++ b/src/ui/css/yakyak/convadd.less
@@ -78,12 +78,16 @@
       flex-flow: column;
       align-items: center;
       justify-content: space-between;
-      > img {
+      > .avatar img {
         width: 50px;
         height: 50px;
         background-size: cover;
         border-radius: 50%;
         flex: none;
+        position: relative;
+      }
+      > .avatar .initials {
+        position: relative;
       }
       > p {
           overflow: hidden;
