--- a/src/ui/css/yakyak/global.less
+++ b/src/ui/css/yakyak/global.less
@@ -78,3 +78,31 @@ img.emoji {
    margin: 0 .05em 0 .1em;
    vertical-align: -0.1em;
 }
+
+.avatar {
+  img, .initials {
+      object-fit: cover;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      color: var(--white);
+      background: var(--grey);
+      position: absolute;
+      text-align: center;
+      text-transform: uppercase;
+      justify-content: center;
+      align-items: center;
+      //
+      line-height: 41px;
+      font-size: 15px;
+      &.fallback {
+          display:none;
+      }
+  }
+  &.fallback-on img{
+      display: none;
+  }
+  &.fallback-on .initials.fallback {
+      display: inherit;
+  }
+}
