use absolute measure instead

--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -60,7 +60,7 @@
                 text-align: center;
                 margin-bottom: 1em;
                 img {
-                    height: 10em;
+                    height: 160px;
                 }
                 span.text {
                     text-align: center;
