--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -58,20 +58,20 @@
             align-items: center;
             div  {
                 text-align: center;
-                margin-bottom: 1em;
+                margin-bottom: 15px; // cannot be relative measures
                 img {
-                    height: 160px;
+                    height: 160px; // cannot be relative measures
                 }
                 span.text {
                     text-align: center;
-                    font-size: 2em;
+                    font-size: 30px; // cannot be relative measures
                     color: #555;
                 }
                 &.spinner {
                   text-align: center;
                   > div {
-                    width: 18px;
-                    height: 18px;
+                    width: 18px;   // cannot be relative measures
+                    height: 18px;  // cannot be relative measures
                     background-color: var(--green);
 
                     border-radius: 100%;
