improve layout of about window, and close on clicking outside

--- a/src/ui/css/yakyak/global.less
+++ b/src/ui/css/yakyak/global.less
@@ -106,3 +106,13 @@ img.emoji {
       display: inherit;
   }
 }
+
+.close-me {
+    font-size: .95em;
+    color: #777;
+    position:absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+}
+
