showing only last has some bugs, defaults to show all

--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -24,7 +24,7 @@
           font-size: 11px;
           color: var(--darkgrey);
           margin-right: 25px;
-          display: none;
+          display: inline-block;
           &.show {
               display: inline-block;
           }
