moves conversation bottom to top and saturates seen icos

--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -196,6 +196,8 @@
             overflow-x: hidden;
             overflow-y: auto;
             padding-bottom: 35px;
+            display: flex;
+            flex-flow: column-reverse;
         }
         > .maininfo {
             flex: none;
