a mixture between sepia and opacity is much better

--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -20,7 +20,7 @@
         width: 66%;
         margin-left: 25px;
         .seen {
-            filter: saturate(40%);
+            filter: saturate(60%);
             text-decoration: none;
             font-size: 11px;
             color: var(--darkgrey);
@@ -47,6 +47,7 @@
                     &.fallback {
                         display: none;
                     }
+                    opacity: 0.5;
                 }
             }
         }
