--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -19,35 +19,45 @@
         position: relative;
         width: 66%;
         margin-left: 25px;
-        .seen {
-            filter: saturate(60%);
-            text-decoration: none;
-            font-size: 11px;
-            color: var(--darkgrey);
-            margin-right: 25px;
-            display: inline-block;
-            &.show {
-               display: inline-block;
-            }
-            .avatar {
-                &.fallback-on img{
-                    display: none;
-                }
-                &.fallback-on .initials.fallback {
-                    display: flex;
-                }
-                img, .initials {
-                    width: 21px;
-                    height: 21px;
-                    border: 2px solid var(--lightgrey);
-                    bottom: 0px;
-                    font-size: 10px;
-                    line-height: 41px;
-                    display: flex;
-                    &.fallback {
+        &.self .seen-list {
+           right: 12px;
+           left: auto;
+        }
+        .seen-list {
+            --size: 21px;
+            position: absolute;
+            bottom: -14px;
+            left: 12px;
+            display: flex;
+            flex-direction: row-reverse;
+            .seen {
+                width: var(--size);
+                height: var(--size);
+                filter: saturate(60%);
+                text-decoration: none;
+                font-size: 11px;
+                color: var(--darkgrey);
+                display: inline-block;
+                .avatar {
+                    &.fallback-on img{
                         display: none;
                     }
-                    opacity: 0.5;
+                    &.fallback-on .initials.fallback {
+                        display: flex;
+                    }
+                    img, .initials {
+                        width: var(--size);
+                        height: var(--size);
+                        border: 2px solid var(--lightgrey);
+                        bottom: 0px;
+                        font-size: 10px;
+                        line-height: 41px;
+                        display: flex;
+                        &.fallback {
+                            display: none;
+                        }
+                        opacity: 0.5;
+                    }
                 }
             }
         }
