intials have now vivid colors

--- a/src/ui/css/yakyak/global.less
+++ b/src/ui/css/yakyak/global.less
@@ -80,6 +80,35 @@ img.emoji {
 }
 
 .avatar {
+    .initials {
+        &[data-first-letter="-1"] { background-color: #354458}
+        &[data-first-letter="0"]  { background-color: #69D2E7}
+        &[data-first-letter="1"]  { background-color: #F2AE72}
+        &[data-first-letter="2"]  { background-color: #28ABE3}
+        &[data-first-letter="3"]  { background-color: #F38630}
+        &[data-first-letter="4"]  { background-color: #FA6900}
+        &[data-first-letter="5"]  { background-color: #542733}
+        &[data-first-letter="6"]  { background-color: #1FDA9A}
+        &[data-first-letter="7"]  { background-color: #DB3340}
+        &[data-first-letter="8"]  { background-color: #E8B71A}
+        &[data-first-letter="9"]  { background-color: #588C73}
+        &[data-first-letter="10"] { background-color: #D96459}
+        &[data-first-letter="11"] { background-color: #8C4646}
+        &[data-first-letter="12"] { background-color: #D0C91F}
+        &[data-first-letter="13"] { background-color: #609194}
+        &[data-first-letter="14"] { background-color: #29ABA4}
+        &[data-first-letter="15"] { background-color: #DA4624}
+        &[data-first-letter="16"] { background-color: #BCCF02}
+        &[data-first-letter="17"] { background-color: #FFD041}
+        &[data-first-letter="18"] { background-color: #DD5F32}
+        &[data-first-letter="19"] { background-color: #9B539C}
+        &[data-first-letter="20"] { background-color: #00A03E}
+        &[data-first-letter="21"] { background-color: #92B06A}
+        &[data-first-letter="23"] { background-color: #8BAD39}
+        &[data-first-letter="24"] { background-color: #6E0000}
+        &[data-first-letter="25"] { background-color: #1352A2}
+
+  }
   img, .initials {
       object-fit: cover;
       border-radius: 50%;
@@ -115,4 +144,3 @@ img.emoji {
     right: 0;
     cursor: pointer;
 }
-
