show normal cursor while hovering initials

--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -31,6 +31,8 @@
             display: flex;
             flex-direction: row-reverse;
             .seen {
+                // don't show the text text while hovering  initials
+                cursor: default;
                 width: var(--size);
                 height: var(--size);
                 filter: saturate(60%);
