force colors to be white in initials

--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -72,7 +72,7 @@
                   > div {
                     width: 18px;   // cannot be relative measures
                     height: 18px;  // cannot be relative measures
-                    background-color: var(--green);
+                    background-color: var(--yakyakgreen);
 
                     border-radius: 100%;
                     display: inline-block;
