--- a/src/ui/css/yakyak/convlist.less
+++ b/src/ui/css/yakyak/convlist.less
@@ -155,7 +155,7 @@
                 right: 0;
                 background: var(--darkgrey);
                 border-radius: 100%;
-                color: var(--white);
+                color: white;
                 text-align: center;
                 font-size: 11px;
             }
