color in initials is as before, improves the +X
when the +X is drawn, the title of this element shows the
 names of the rest of the people in the conversation

--- a/src/ui/css/yakyak/convlist.less
+++ b/src/ui/css/yakyak/convlist.less
@@ -155,7 +155,7 @@
                 right: 0;
                 background: var(--darkgrey);
                 border-radius: 100%;
-                color: white;
+                color: var(--white);
                 text-align: center;
                 font-size: 11px;
             }
