--- a/src/ui/css/yakyak/global.less
+++ b/src/ui/css/yakyak/global.less
@@ -113,7 +113,7 @@ img.emoji {
       border-radius: 50%;
       width: 50px;
       height: 50px;
-      color: white;
+      color: var(--white);
       background: var(--grey);
       position: absolute;
       text-align: center;
