add about menu to applayout

--- a/src/ui/css/yakyak/fonts.less
+++ b/src/ui/css/yakyak/fonts.less
@@ -20,6 +20,11 @@ html {
   &.x-large {
     --fontsize: 18px;
   }
+
+  .f-small {
+      font-size: .7em;
+  }
+  .f-no-bold {
+      font-weight: normal;
+  }
 }
-
-
