#562 fixes shortcode and font ordering

--- a/src/ui/css/yakyak/input.less
+++ b/src/ui/css/yakyak/input.less
@@ -11,7 +11,7 @@
 }
 
 .input {
-    font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, "NotoColorEmoji";
+    font-family: 'Roboto', "Helvetica Neue", NotoColorEmoji, Helvetica, Arial, "Lucida Grande", sans-serif;
     position: relative;
 
     #preview-container {
