--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -121,7 +121,7 @@
             text-align: left;
             overflow: hidden;
             .message {
-                font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, "NotoColorEmoji";
+                font-family: Roboto, "Helvetica Neue", NotoColorEmoji, Helvetica, Arial, "Lucida Grande", sans-serif;
                 padding: 5px;
                 white-space: pre-wrap;
                 word-break: break-word;
