add convlist and use global variables for fonts

--- a/src/ui/css/yakyak/convlist.less
+++ b/src/ui/css/yakyak/convlist.less
@@ -87,6 +87,9 @@
                 color: var(--lightblack);
             }
             .lastmessage{
+                .message {
+                  font-family: var(--emojifont);
+                }
                 > div{
                     overflow: hidden;
                     text-overflow: ellipsis;
