--- a/src/ui/css/yakyak/global.less
+++ b/src/ui/css/yakyak/global.less
@@ -18,7 +18,7 @@ html, body {
 
 body {
     background: #fff;
-    font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: var(--globalfont);
     color: var(--black);
     font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
