--- a/src/ui/css/yakyak/fonts.less
+++ b/src/ui/css/yakyak/fonts.less
@@ -1,5 +1,7 @@
 // colors
 html {
+--emojifont: Roboto, "Helvetica Neue", NotoColorEmoji, Helvetica, Arial, "Lucida Grande", sans-serif;
+--globalfont: Roboto, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
   &.x-small {
     --fontsize: 10px;
