adds segoe font

--- a/src/ui/css/yakyak/fonts.less
+++ b/src/ui/css/yakyak/fonts.less
@@ -1,6 +1,6 @@
 // colors
 html {
---emojifont: Roboto, "Helvetica Neue", NotoColorEmoji, Helvetica, Arial, "Lucida Grande", sans-serif;
+--emojifont: Roboto, "Helvetica Neue", NotoColorEmoji, 'Segoe UI Emoji', Helvetica, Arial, "Lucida Grande", sans-serif;
 --globalfont: Roboto, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
   &.x-small {
