--- a/src/ui/css/yakyak/convlist.less
+++ b/src/ui/css/yakyak/convlist.less
@@ -146,7 +146,7 @@
                 bottom: -1px;
                 right: -1px;
                 &.true{
-                    background: var(--green);
+                    background: var(--online);
                     border: 2px solid var(--white);
                 }
             }
