Louder 'sending' message indication.

--- a/src/ui/css/yakyak/messages.less
+++ b/src/ui/css/yakyak/messages.less
@@ -131,6 +131,12 @@
                 &.placeholder {
                     opacity: 0.5;
                 }
+                &.placeholder:before {
+                  position: absolute;
+                  bottom: 100%;
+                  color: pink;
+                  content: 'sending...';
+                }
                 .attach {
                     margin-top: 4px;
                 }
