Use custom window frame for Linux/Windows platforms

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -50,9 +50,13 @@ html{
     .listhead button,
     .convhead .name,
     .controls .button,
-    .convhead .headwrap > .button,
+    .convhead .headwrap .optionwrapper > .button,
     .convadd .button{
       color: var(--black);
+    }
+
+    .convhead .win-buttons button{
+      background-color: var(--black);
     }
   }
 
