--- a/src/ui/css/yakyak/listhead.less
+++ b/src/ui/css/yakyak/listhead.less
@@ -12,6 +12,7 @@
     -webkit-user-select: none;
     z-index: 2; // hides the separator in the header
     button{
+        -webkit-app-region: no-drag;
         background: none;
         color: var(--white);
         height: ~"calc(var(--headerbarheight) / var(--zoom))";
@@ -27,6 +28,7 @@
     .minimal & span{
         display: none;
     }
+
 }
 
 .osx {
