--- a/src/ui/css/yakyak/convadd.less
+++ b/src/ui/css/yakyak/convadd.less
@@ -58,6 +58,15 @@
     display: flex;
     flex-wrap: wrap;
     margin: 10px -4px 20px -4px;
+    li.ct-local {
+      background: #AED581;
+      &:hover {
+          background: #C5E1A5;
+      }
+    }
+    li.ct-local.selected {
+      background-color: #81C784;
+    }
     li.selected {
       background-color: var(--altgrey);
     }
