adds maximum of five lines

--- a/src/ui/css/yakyak/input.less
+++ b/src/ui/css/yakyak/input.less
@@ -137,6 +137,8 @@
             resize: vertical;
             font-size: var(--fontsize);
             line-height: 18px;
+            // maximum of five lines
+            max-height: calc(18px*5 + 3px*2);
             outline: none;
             border: none;
             background: none;
