--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -2,6 +2,7 @@
 html{
   --yakyakgreen: #0f9d58;
   //
+  --purple: #804cad;
   --white: #ffffff;
   --ghostwhite: #f4f4f4;
   --lightgrey: #e8e8e8;
@@ -62,19 +63,19 @@ html{
 
   &.material{
     --white: #202B31;
-      --ghostwhite: #2d3d46;
-      --lightgrey: #28353B;
-      --altgrey: #2B3E41;
-      --grey: #303F47;
-      --darkgrey: #617E8A;
-      --lightblack: #455a64;
-      --black: #99B1B7;
-      --green: #7BC8BF;
-      --darkgreen: #57b9ae;
-      --red: #996DBF;
-      --darkred: #804cad;
-      --link: #F9C15C;
-      --tweetbg: #644104;
-      --instagrambg: #333940;
+    --ghostwhite: #2d3d46;
+    --lightgrey: #28353B;
+    --altgrey: #2B3E41;
+    --grey: #303F47;
+    --darkgrey: #617E8A;
+    --lightblack: #455a64;
+    --black: #99B1B7;
+    --green: #7BC8BF;
+    --darkgreen: #57b9ae;
+    --red: #996DBF;
+    --darkred: #804cad;
+    --link: #F9C15C;
+    --tweetbg: #644104;
+    --instagrambg: #333940;
   }
 }
