Add styling to history on/off events
Add a banner in conversation to replicate hangouts behavior that notifies who turned history on/off. Change color of conversation bubbles depending on history being on or off

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -20,6 +20,8 @@ html{
   --tweettext: #fff;
   --instagrambg: #55acee;
   --instagramtext: #fff;
+  --historyoffdarkgrey: #b0bec5;
+  --historyoffaltgrey: #cfd8dc;
   //
   --headerbarheight: 35px;
 
