add gruvbox inspired theme
Add a gruvbox (https://github.com/morhetz/gruvbox) inspired theme.

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -77,4 +77,23 @@ html{
       --tweetbg: #644104;
       --instagrambg: #333940;
   }
+
+  &.gruvy{
+    --white: #303030;
+    --ghostwhite: #458588;
+    --lightgrey: #282828;
+    --altgrey: #3c3836;
+    --grey: #928374;
+    --darkgrey: #83a598;
+    --lightblack: #d5c4a1;
+    --black: #ebdbb2;
+    --green: #458588;
+    --online: #b8bb26;
+    --darkgreen: #3b6d6f;
+    --red: #fb4934;
+    --darkred: #cc241d;
+    --link: #8ec07c;
+    --tweetbg: #458588;
+    --instagrambg: #b16286;
+  }
 }
