forgot to pull in extra options I originally used

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -95,5 +95,18 @@ html{
     --link: #8ec07c;
     --tweetbg: #458588;
     --instagrambg: #b16286;
+
+   .listhead,
+   .listhead button,
+   .convhead .name,
+   .controls .button,
+   .convhead .headwrap .optionwrapper > .button,
+   .convadd .button{
+     color: var(--black);
+   }
+
+   .convhead .win-buttons button{
+     background-color: var(--black);
+   }
   }
 }
