--- a/src/ui/css/yakyak/input.less
+++ b/src/ui/css/yakyak/input.less
@@ -67,7 +67,7 @@
         display: inline-block;
         width: 30px;
         height: 30px;
-        line-height: 30px;
+        line-height: 30px; 
         font-size: 20px;
         text-align: center;
         cursor: pointer;
@@ -81,6 +81,20 @@
         text-align: center;
         cursor: pointer;
     }
+    img.stickericon {
+        display: inline-block;
+        width: 32px;
+        height: 32px;
+        cursor: pointer;
+    }
+
+    img.sticker {
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+        cursor: pointer;
+    }
+
 
     div.relative {
         position: relative;
@@ -145,7 +159,7 @@
             > #stickers-group-selector {
                 overflow-x: scroll;
                 border-bottom: 1px solid var(--lightgrey);
-                height: 33px;
+                height: 50px;
                 margin-left: 5px;
 
                 > .stickericon {
