work on color emojies bugfixes

--- a/src/ui/css/yakyak/global.less
+++ b/src/ui/css/yakyak/global.less
@@ -79,6 +79,11 @@ img.emoji {
    vertical-align: -0.1em;
 }
 
+img.colorEmoji {
+    height:36px;
+    width:36px;
+}
+
 .avatar {
     .initials {
         &[data-first-letter="-1"] { background-color: #354458}
