Added a Pop!_OS (https://system76.com/pop) inspired theme.

--- a/src/ui/css/yakyak/colors.less
+++ b/src/ui/css/yakyak/colors.less
@@ -77,4 +77,36 @@ html{
       --tweetbg: #644104;
       --instagrambg: #333940;
   }
+
+  &.pop{
+      --white: #4C4845;
+      --ghostwhite: #403B39;
+      --lightgrey: #393634;
+      --altgrey: #3F3B39;
+      --grey: #FAEBCB;
+      --darkgrey: #50858B;
+      --lightblack: #FAEBCB;
+      --black: #A2A2A2;
+      --green: #3C3937;
+      --online: var(--yakyakgreen);
+      --darkgreen: #3F975E;
+      --red: #3C3937;
+      --darkred: #CE440D;
+      --link: #F9C15C;
+      --tweetbg: #644104;
+      --instagrambg: #333940;
+
+    .listhead,
+    .listhead button,
+    .convhead .name,
+    .controls .button,
+    .convhead .headwrap .optionwrapper > .button,
+    .convadd .button{
+      color: var(--black);
+    }
+
+    .convhead .win-buttons button{
+      background-color: var(--black);
+    }
+  }
 }
